                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 24-04-2006 fixed: Edit/Delete source (bookmark) did not work properly from UI 
 - 24-04-2006 fixed: CFileCUrl::Exists (http reader) would return that a file at the specified url didn't exist even if it really did.
 - 24-04-2006 fixed: if a proxy port was set, shout:// would read unallocated memory.
 - 24-04-2006 updated: German language file
 - 24-04-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 24-04-2006 updated: Norwegian language file (Thnx to vnm)
 - 24-04-2006 fixed: [ 1474938 ] non UTF-8 coded files displyed incorrectly (ccxstream share)
 - 24-04-2006 fixed: cdgreader tried to load on each frame
 - 24-04-2006 updated: french language file
 - 24-04-2006 fixed: Delete and Rename was disabled for stacked files.
 - 24-04-2006 changed: [ 1042376 ] Recording stops after 100 songs - now goes to 999 songs.
 - 24-04-2006 fixed: Unicode xbe descriptions were mangled.
 - 24-04-2006 fixed: [ 1475007 ] Sending button presses to webserver inconsistencies.
 - 24-04-2006 fixed: Hide File Extensions option applied to formatted labels instead of just filenames.
 - 24-04-2006 fixed: Unicode string input to xbmcgui.Dialog().select"
 - 24-04-2006 fixed: Thumbnail panels didn't wrap around when going up from first item or down from last item.
 - 24-04-2006 fixed: Crash when changing GUI resolution while playing media.
 - 23-04-2006 fixed: If screensaver window is activated externally (via web or python or whatever) it wouldn't register, so would be activated again after the usual timeout.
 - 23-04-2006 fixed: Karaoke is always rendered on top of visualisations.