@@ -7,5 +7,5 @@ class IDVDPlayer;
 class CDVDFactoryInputStream
 {
 public:
-  static CDVDInputStream* CreateInputStream(IDVDPlayer* pPlayer, const char* strFile);
+  static CDVDInputStream* CreateInputStream(IDVDPlayer* pPlayer, const std::string& file, const std::string& content);
 };
