@@ -10,11 +10,12 @@ class CDVDInputStreamHttp : public CDVDInputStream, IHttpHeaderCallback
 public:
   CDVDInputStreamHttp();
   virtual ~CDVDInputStreamHttp();
-  virtual bool Open(const char* strFile);
+  virtual bool Open(const char* strFile, const std::string& content);
   virtual void Close();
   virtual int Read(BYTE* buf, int buf_size);
   virtual __int64 Seek(__int64 offset, int whence);
   virtual bool IsEOF();
+  virtual __int64 GetLength();
 
   virtual void ParseHeaderData(CStdString strData);
   
