@@ -9,5 +9,5 @@ public:
   virtual ~CodecFactory() {}
 
   static ICodec* CreateCodec(const CStdString& strFileType);
-  static ICodec* CreateCodecDemux(const CStdString& strFile, unsigned int filecache);
+  static ICodec* CreateCodecDemux(const CStdString& strFile, const CStdString& strContent,unsigned int filecache);
 };
